# LazyCommitsLint

./: .gitignore  README.md  pyproject.toml  tags
hooks/: commit-msg
src/lazycommitslint/: cli.py  config.py  git_analyze.py
