[project]
name = "lcl"
version = "0.1.0"
description = "Something like a Linter for commits. Will check your commit for your format and suggest correct if your current wrong"
authors = [
    {name = "Silletr",email = "silletr@duck.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer (>=0.24.0,<0.25.0)",
    "tomlkit (>=0.14.0,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
