[tool.poetry]
name = "LazyCommitsLint"
version = "0.1.2.0"
description = "Something like a Linter for git commits."
authors = ["Silletr <silletr@duck.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Silletr/LazyCommitsLint"
packages = [{include = "lazycommitslint", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
typer = "^0.20.0"
tomlkit = "^0.12.0"

[tool.poetry.scripts]
lazycommitslint = "lazycommitslint.cli:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
